# anvil

./: .gitignore  README.md  TODO.md  pyproject.toml  run  scratch.txt  test_brain.py  todo.md
scripts/: visualize_graph.py
src/anvil/: main.py
src/anvil/agent/: brain.py  graph.py  llm.py  prompts.py  state.py
src/anvil/agent/agents/: __init__.py  base.py  compatibility.py  orchestrator.py  risk_assessor.py  security_auditor.py
src/anvil/agent/nodes/: __init__.py  analyze.py  commit.py  confirm.py  install.py  rollback.py  scan.py  select.py  test_runner.py
src/anvil/core/: env.py  graph.py  logging.py  models.py  scanner.py  upgrader.py
src/anvil/core/parsers/: base.py  pyproject.py  requirements.py
src/anvil/retrievers/: base.py  github.py  main.py  pypi.py
src/anvil/tools/: package.py  runner.py
src/anvil/ui/: dashboard.py
tests/: test_agents.py  test_graph_nodes.py  test_parsers.py  test_retrievers.py
tests/tools/: runner.py
