[project]
name = "anvil-py"
version = "0.1.1"
description = "AI-powered agentic dependency manager that analyzes changelogs and safely upgrades packages."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Akash Bhat", email = "quentesia.art@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]
keywords = ["dependency-manager", "agent", "ai", "llm", "upgrade", "automation", "security", "forensics"]
urls = { Repository = "https://github.com/akashbhat/anvil", Issues = "https://github.com/akashbhat/anvil/issues" }

dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "packaging>=23.0",
    "tomli>=2.0.0",
    "requests>=2.30.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "langchain-ollama>=0.2.0",
]

[project.scripts]
anvil = "anvil.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anvil"]
